--- a/assets/styles/style2.css
+++ b/assets/styles/style2.css
@@ -12,8 +12,6 @@ header {
     height: 35vh;
     background-image: url(../img/design1_image2.jpg);
     background-size: cover;
-    /*background-repeat: no-repeat;
-    background-position-y: 5.5vh;*/
     margin-top: 6vh;
 }
 
@@ -25,8 +23,9 @@ header>img {
 }
 
 header>h1 {
-    color: #F3D22E;
-    text-shadow: black 3px 3px;
+    font-style: italic;
+    /*color: #F3D22E;
+    text-shadow: black 3px 3px;*/
     margin-left: 5px;
     position: relative;
     top: -6vh;
