--- a/assets/styles/style3.css
+++ b/assets/styles/style3.css
@@ -5,6 +5,11 @@
     font-family: Roboto, Oxygen, sans-serif
 }
 
+body{
+    width: 100vw;
+    height: 100vh;
+}
+
 header {
     display: flex;
     flex-direction: column;
@@ -148,6 +153,12 @@ article>p {
 
 /*Game Info*/
 
+.gameinfo-main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .game-info {
     display: flex;
     flex-direction: column;
@@ -212,6 +223,38 @@ tr:nth-child(even) {
     justify-content: space-between;
 }
 
+.location-maps{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    justify-content: center;
+    margin-bottom: 5vh;
+    background-color: white;
+    margin-bottom: 5vh;
+    padding: 20px;
+    border: 5px solid coral;
+    border-radius: 10px;
+}
+
+.location-maps>h2{
+    text-align: center;
+    padding: 20px;
+}
+
+.location-cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;   
+}
+
+.card{
+    text-align: center;
+}
+
+iframe{
+    border-radius: 2rem;
+}
 /*Rules*/
 
 .rules-info {
@@ -266,4 +309,19 @@ ul li::marker {
     list-style-type: lower-alpha;
     list-style-position: inside;
     margin-left: 20px;
+}
+
+/*Registration Form*/
+
+
+
+/*Feedback Info*/
+.table-feedback{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5vh;
+}
+.table-feedback>table>caption{
+    text-align: center;
+    margin-bottom: 10px;
 }
